responsive nav itens layout bug fixed

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -2,12 +2,6 @@
     .contato .texto-contato{
         margin-right: 19vw;
     }
-
-    .cabecalho nav ul li{
-        display: block;
-        padding: 18px;
-    }
-
     
 }
 
